<resources>
    <string name="app_name">Let\'s Chat</string>
    <string name="version_1_0">Version: 1.3</string>

    <!-- Strings related to login -->
    <string name="uiet">UIET Kanpur</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_roll">This roll number is invalid</string>
    <string name="error_invalid_email">This email is invalid</string>
    <string name="error_invalid_username">This user name is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_incorrect_password_match">Password not match</string>
    <string name="error_field_required">This field is required</string>
    <string name="news">News</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="remember">Remember</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="logout">Logout</string>
    <string name="password">Password</string>
    <string name="noInternet">No Internet Available</string>
    <string name="retry_password">Re-enter Password</string>
    <string name="type_a_message">Type a message</string>

    <string-array name="branch">
        <item>CSE</item>
        <item>IT</item>
        <item>MEE</item>
        <item>ECE</item>
        <item>CHE</item>
        <item>MSME</item>
    </string-array>
    <string-array name="year">
        <item>First</item>
        <item>Second</item>
        <item>Third</item>
        <item>Fourth</item>
        <item>Alumni</item>
    </string-array>

    <string-array name="contacts">
        <item>Dr. Renu Jain</item>
        <item>Dr. Ravindra Nath</item>
        <item>Er. Deepak Kumar Verma</item>
        <item>Er. Alok Kumar</item>
        <item>Er. Shesh Mani Tiwari</item>
        <item>Er. Mohd. Shah Alam</item>
        <item>Er. Suruchi Kanaujiya</item>
        <item>Er. Beena Awasthi</item>
    </string-array>

    <string name="full_name">Full name</string>
    <string name="branch">Branch</string>
    <string name="roll_number">Roll Number</string>
    <string name="csjma">CSJMA</string>
    <string name="eg_13001390001">eg: 13001390001</string>
    <string name="email">Email</string>
    <string name="sending">Sending</string>
    <string name="name">Name</string>
    <string name="title_activity_about">About</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="about">About</string>
    <string name="title_activity_edit_info">Profile</string>
    <string name="edit_info">Profile</string>
    <string name="uiet_info">The University Institute of Engineering and Technology (UIET), Kanpur, India, founded in 1996 (earlier known as Institute of Engineering and Technology, Kanpur), is an engineering and technology institute located in Kanpur, India.</string>
    <string name="uiet_info2">UIET is an autonomous institute of the Kanpur University (officially known as CSJM University, with its premises within the university campus.</string>
    <string name="uiet_info3">The UIET is a brainchild of its founder Prof. S.S. Katiyar, the former Vice Chancellor of Kanpur University.</string>
    <string name="uiet_info4">It is set amidst the university campus that has an area of about 265 acres. It is one of the constituent institutes of the university. It was founded in 1996 with an initial strength of 240 students, and now more than 1700 students on its rolls in all the six disciplines of engineering and other career-oriented programs like MCA, BCA, M.Sc. (Electronics), M.Sc. (Bioinformatics),B.Tech and Advanced PG Diploma in Bioinformatics. It is a self-financed institute in Engineering and Technology as well as Sciences.</string>
    <string name="uiet_info5">The institute offers standard four year Indian Bachelor of Technology (B.Tech.) courses in fields as Computer Science and Engineering, Electrical and Electronics Engineering, Electronics and Communications Engineering, Electronics and Instrumentation Engineering, Mechanical Engineering, Chemical Engineering, Information Technology, Materials science and Metallurgical engineering. 3-years Bachelor of Computer Application. Postgraduate courses include Master of Science (M.Sc.) in Electronics and Bioinformatics,3-years Master of Computer Applications, diploma studies and Master of Philosophy in Physics, Chemistry and Mathematics.</string>
    <string name="vishal_anand_n_vishalanandl177_gmail_com">- Vishal Anand\n- vishalanandl177@gmail.com</string>
    <string name="roll">Roll Number</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="proceed">Proceed</string>
    <string name="title_activity_student_gallery">Student Gallery</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="student_gallery">Student Gallery</string>
    <string name="contacts">Contacts</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gallery">Gallery</string>
    <string name="select_branch">Select Branch</string>
    <string name="select_year">Select Year</string>
    <string name="notes">Notes</string>
    <string name="title">Title : </string>
    <string name="menu_delete">Delete Item</string>
    <string name="no_title">No Title</string>
    <string name="edit_note">Edit Note</string>
    <string name="save_menu_noteedit">Save</string>
    <string name="delete_menu_noteedit">Delete</string>
    <string name="setting">Settings</string>
    <string name="title_activity_note_list">NoteListActivity</string>
    <string name="title_activity_list_note">ListNoteActivity</string>
    <string name="title_activity_note_edit">NoteEditActivity</string>
    <string name="facebook_app_id">1719395631634069</string>
    <string name="send">Send</string>
    <string name="feedback">Feedback</string>
    <string name="done">Done</string>
    <string name="title_activity_notification">Notifications</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Skip</string>
    <string name="title_activity_news">News</string>
    <string name="title_activity_about_page">AboutPage</string>

</resources>
