<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="2dp"
    android:layout_marginTop="2dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="7dp"
    tools:context="com.anand.vishal.uietcommunication.AboutCollege">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true">

            <TextView
                android:id="@+id/uiet_text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/uiet_info"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/uiet_text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/uiet_text1"
                android:padding="10dp"
                android:text="@string/uiet_info2"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/uiet_text3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/uiet_text2"
                android:padding="10dp"
                android:text="@string/uiet_info3"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/uiet_text4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/uiet_text3"
                android:padding="10dp"
                android:text="@string/uiet_info4"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/uiet_text5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/uiet_text4"
                android:padding="10dp"
                android:text="@string/uiet_info5"
                android:textSize="17sp" />
        </RelativeLayout>
    </ScrollView>

</android.support.v7.widget.CardView>
