<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_menu_contact"
            android:title="@string/contacts" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_collections_black_24dp"
            android:title="@string/gallery" />

        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_thumbs_up_down_black_24dp"
            android:title="@string/feedback" />

    </group>

    <item android:title="About"
        >
        <menu>
            <group android:checkableBehavior="single" >
            <item
                android:id="@+id/nav_college"
                android:icon="@drawable/ic_school_black_24dp"
                android:title="College" />
            <item
                android:id="@+id/nav_developer"
                android:icon="@drawable/ic_gavel_black_24dp"
                android:title="Developer" />
                <item
                    android:id="@+id/nav_app"
                    android:icon="@drawable/ic_info_black_24dp"
                    android:title="App" />
            </group>
        </menu>
    </item>

</menu>
